fix overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1138,6 +1138,12 @@ li {
   padding-top: 40px;
 }
 
+.gh-data-container {
+  display: flex; 
+  flex-direction: row; 
+  padding-top: 40px;
+}
+
 /* Shopify page */
 .shopify-portfolio-item {
   display: flex;
